# tez-benzerlik

./: .dockerignore  .gitignore  .wranglerignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALL.sh  LICENSE  MCP_README.md  README.md  README_VERCEL.md  VERCEL_DEPLOYMENT.md  WEB_README.md  debug_advanced_tab.py  debug_detail_page.py  debug_result_links.py  debug_results_page.py  debug_search_to_detail.py  debug_yok_page.py  pyproject.toml  railway.json  requirements-vercel.txt  requirements.txt  server.py  server_fastmcp.py  smithery.json  start_all.sh  start_backend.sh  start_backend_simple.sh  start_frontend.sh  test_click_modal.py  test_detail_flow.py  test_detailed_search.py  test_selenium_scraper.py  worker.py  wrangler.toml
.claude/: settings.json
api/: index.py
backend/: __init__.py  api.py  mock_data.py
cloudflare/: wrangler.toml
examples/: example_queries.json
frontend/: app.js  index.html
src/: __init__.py  httpx_scraper.py  scraper.py  selenium_scraper.py  server.py  utils.py
tests/: __init__.py  test_scraper.py  test_server.py
